Main Menu toegevoegd en UI interactie bug opgelost

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/_DutchTouristSimulator/Development/Game/BP_GameInstance_Main.BP_GameInstance_Main_C
 GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/_DutchTouristSimulator/Development/Game/BP_GameMode_Main.BP_GameMode_Main_C
