Quiz aangepast/ Begonnen aan Picture Picker functionaliteit/ Collision problemen opgelost/ Prototype build gemaakt

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,15 +4,15 @@ GameName=DTS
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 LocalMapOptions=
-TransitionMap=None
+TransitionMap=/Game/_DutchTouristSimulator/Maps/DTS_Map_Template.DTS_Map_Template
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/_DutchTouristSimulator/Development/Game/BP_GameInstance_Main.BP_GameInstance_Main_C
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
-ServerDefaultMap=/Engine/Maps/Entry.Entry
+GameDefaultMap=/Game/_DutchTouristSimulator/Maps/DTS_Main_Menu.DTS_Main_Menu
+ServerDefaultMap=/Game/_DutchTouristSimulator/Maps/DTS_Main_Menu.DTS_Main_Menu
 GlobalDefaultGameMode=/Game/_DutchTouristSimulator/Development/Game/BP_GameMode_Main.BP_GameMode_Main_C
 GlobalDefaultServerGameMode=None
 
